fix h3 size and thumbnail size on mobile

--- a/scss/article.scss
+++ b/scss/article.scss
@@ -280,7 +280,7 @@ article.item-half {
   .item.item-third {
     margin-right: 0px;
     margin-left: 0px;
-    width: auto;
+    width: 100%;
     max-width: 100%;
   }
 }
