--- a/scss/global.scss
+++ b/scss/global.scss
@@ -120,8 +120,8 @@ h5 {
   }
   @media screen and (max-width: 768px) {
     h3 {
-      font-size: 4vw;
-      line-height: 5vw;
+      font-size: 20px;
+      line-height: 24px;
     }
   }
   body p {
